# Aegis-PM

./: .gitignore  README.md
agents/aegis-pm-fixed/: ARCHITECTURE.md  EXECUTION_WALKTHROUGH.md  PRD.md  README.md  config.py  main.py  pyproject.toml  requirements.txt
agents/aegis-pm-fixed/aegis_pm/: __init__.py  config.py  schemas.py  service.py
agents/aegis-pm-fixed/aegis_pm/agents/: __init__.py  base.py  dev_agent.py  planner_agent.py  pm_agent.py  qa_agent.py  reporter_agent.py  risk_agent.py  task_agent.py
agents/aegis-pm-fixed/aegis_pm/api/: __init__.py  app.py
agents/aegis-pm-fixed/aegis_pm/memory/: __init__.py  decision_log.py  state_store.py  vector_store.py
agents/aegis-pm-fixed/aegis_pm/observability/: __init__.py  logger.py  metrics.py
agents/aegis-pm-fixed/aegis_pm/tools/: __init__.py  base.py  github_tool.py  jira_tool.py  registry.py  slack_tool.py
agents/aegis-pm-fixed/aegis_pm/workflows/: __init__.py  execution_loop.py  (+3 more)
agents/aegis-pm-fixed/agents/: base_agent.py  planner_agent.py  pm_agent.py  reporter_agent.py  risk_agent.py  task_agent.py
agents/aegis-pm-fixed/api/: middleware.py  routes.py
agents/aegis-pm-fixed/core/: __init__.py  dag.py  decision_engine.py  schemas.py
agents/aegis-pm-fixed/data/: metrics.json
agents/aegis-pm-fixed/memory/: decision_log.py  state_store.py  vector_memory.py
agents/aegis-pm-fixed/observability/: callbacks.py  logger.py  metrics.py
agents/aegis-pm-fixed/tools/: base_tool.py  github_tool.py  jira_tool.py  memory_tools.py  slack_tool.py
agents/aegis-pm-fixed/workflows/: execution_loop.py
